--- a/SensorGasAPI.Tests/packages.config
+++ b/SensorGasAPI.Tests/packages.config
@@ -1,13 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net462" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
-  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net462" />
-  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
+  <package id="MSTest.TestAdapter" version="2.0.0" targetFramework="net471" />
+  <package id="MSTest.TestFramework" version="2.0.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net471" />
+  <package id="SQLiteNetExtensions" version="2.1.0" targetFramework="net471" />
+  <package id="sqlite-net-pcl" version="1.6.292" targetFramework="net471" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.14" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
 </packages>
