--- a/SensorGasAPI/packages.config
+++ b/SensorGasAPI/packages.config
@@ -1,20 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net462" />
-  <package id="jQuery" version="3.3.1" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
+  <package id="bootstrap" version="4.3.1" targetFramework="net471" />
+  <package id="jQuery" version="3.4.1" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net471" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net462" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net462" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net471" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
+  <package id="popper.js" version="1.14.3" targetFramework="net471" />
+  <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net471" />
+  <package id="SQLiteNetExtensions" version="2.1.0" targetFramework="net471" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net471" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.14" targetFramework="net471" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.14" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
