--- a/SensorGasAPI/packages.config
+++ b/SensorGasAPI/packages.config
@@ -19,7 +19,7 @@
   <package id="popper.js" version="1.14.3" targetFramework="net471" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="net471" />
   <package id="SQLiteNetExtensions" version="2.1.0" targetFramework="net471" />
-  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net471" />
+  <package id="sqlite-net-pcl" version="1.6.292" targetFramework="net471" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.2" targetFramework="net471" />
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net471" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net471" />
@@ -27,10 +27,11 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.14" targetFramework="net471" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.14" targetFramework="net471" />
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.2" targetFramework="net471" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.2" targetFramework="net471" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.14" targetFramework="net471" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
   <package id="System.Memory" version="4.5.3" targetFramework="net471" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
